--- a/RaiderPlate Cont/Views/Home/Index.cshtml
+++ b/RaiderPlate Cont/Views/Home/Index.cshtml
@@ -1,31 +1,82 @@
-﻿@{
+﻿
+@*@model IPagedList<RaiderPlate_Cont.Models.product>*@
+@model IEnumerable<RaiderPlate_Cont.Models.product>
+@{
     ViewBag.Title = "Home Page";
 }
+@using RaiderPlate_Cont.Models;
+@using PagedList;
+@using PagedList.Mvc;
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script type="text/javascript">
+     $(document).ready(function () {
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+         $('#Halls').change(function () {
+             $("#Rest").empty();
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetRestaurants")', // we are calling json method
+
+                dataType: 'json',
+
+                data: { id: $("#Halls").val() },
+                // here we are get value of selected hall and passing same value
+                // as inputto json method GetRestaurants.
+
+                success: function (restaurants) {
+                    // locations contains the JSON formatted list
+                    // of locations passed from the controller
+                    $.each(restaurants, function (i, rest) {
+                        $("#Rest").append('<option value="' + rest.Value + '">' +
+                             rest.Text + '</option>');
+
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed to retrieve states.' + ex);
+                }
+            });
+        });
+    });
+</script>
+
+<div class="container" style="display:block">
+            
+            <div class="panel panel-success col-xs-12 col-md-3" style="border-left:1px;border-right:1px;">
+                <fieldset>
+                    <legend>Halls:</legend>
+                    @Html.DropDownList("Halls",ViewBag.Halls as SelectList, "Select a Hall")
+                    <legend>Restaurants:</legend>
+                    <div>
+                        @Html.DropDownList("Rest", new SelectList(string.Empty, "Value", "Text"), "Please select a Restaurant", new { style = "width:200px", @class = "dropdown1" })
+                    </div>
+                    <p>
+                        <input type="submit" value="Submit" id="SubmitID"/>
+                    </p>
+                </fieldset>
+            </div>
+            <div class="panel panel-success col-xs-12 col-md-9" style="border-left:2px;border-right:2px;">
+                <table class="table sortable table-striped table-hover table-responsive">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th class="col-xs-9 col-md-10">Name</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tbody class="row">
+                        @foreach (product p in Model)
+                        {
+                                <tr onclick="location.href ='@Url.Action("Add","Cart",new {id = p.productID},null)'">
+                                    <td>@p.productID</td>
+                                    <td class="col-xs-9 col-md-10" style="color:#cc0055">@p.productName</td>
+                                    <td>$@p.productPrice</td>
+                                </tr>
+                        }
+                    </tbody>
+                </table>
+                <br />
+                @*@Html.PagedListPager(Model, page => Url.Action("Index",new { page, pageSize = Model.PageSize}))*@
+            </div>
 </div>
