--- a/RaiderPlate Cont/Content/bootstrap.css
+++ b/RaiderPlate Cont/Content/bootstrap.css
@@ -295,6 +295,7 @@ table {
   .table-bordered td {
     border: 1px solid #ddd !important;
   }
+
 }
 
 *,
@@ -1478,7 +1479,7 @@ th {
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
 }
-
+ 
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #f9f9f9;
@@ -1486,7 +1487,8 @@ th {
 
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: lightseagreen;
+  cursor: pointer;
 }
 
 table col[class*="col-"] {
@@ -1536,6 +1538,7 @@ table th[class*="col-"] {
 .table-hover > tbody > tr.success:hover > td {
   background-color: #d0e9c6;
   border-color: #c9e2b3;
+
 }
 
 .table > thead > tr > td.danger,
