--- a/RaiderPlate Cont/Views/Cart/Index.cshtml
+++ b/RaiderPlate Cont/Views/Cart/Index.cshtml
@@ -5,40 +5,71 @@
 }
 @model IEnumerable<RaiderPlate_Cont.Models.Item>
 @using RaiderPlate_Cont.Models;
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#checkAll").click(function () {
+            $(".checkbox").prop('checked', $(this).prop('checked'));
+        });
+
+        $("#update").click(function () {
+            $("form").attr("action", "/cart/update");
+        });
+
+        $("#delete").click(function () {
+            $("form").attr("action", "/cart/delete");
+        });
+    });
+</script>
+
 <fieldset>
     <legend>Your cart:</legend>
-    <table class="table table-striped table-responsive" style="width:100%">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Quantity</th>
-                <th>Cost</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                double sum = 0;
-             }
-            @if (Model != null)
-            {
-                foreach (Item i in (List<Item>)Model)
-                {
-                    sum = sum + (i.Product.productPrice * i.Quantity);
-                    <tr>
-                        <td>@i.Product.productName</td>
-                        <td>@i.Product.productPrice</td>
-                        <td>@i.Quantity</td>
-                        <td>$ @(i.Product.productPrice * i.Quantity)</td>
-                    </tr>
+    @using (Html.BeginForm(FormMethod.Post))
+    {
+        <table class="table table-striped table-responsive" style="width:100%">
+            <thead>
+                <tr>
+                    <th colspan="4" align="left"><input type="submit" id="delete" value="Delete Selected Item" /></th>
+                </tr>
+                <tr>
+                    <th><input type="checkbox" id="checkAll" value="Product ID" /></th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Cost</th>
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    double sum = 0;
                 }
-            }
-                    <tr>
-                        <td colspan="3">SubTotal</td>
-                        <td>$ @sum</td>
-                    </tr>
-        </tbody>
-    </table>
+                @if (Model != null)
+                {
+                    int count = 0;
+                    foreach (Item i in (List<Item>)Model)
+                    {
+                        sum = sum + (i.Product.productPrice * i.Quantity);
+                        <tr>
+                            <td><input type="checkbox" class="checkbox" name="DeletedID" value="@i.Product.productID"/></td>
+                            <td>@i.Product.productName</td>
+                            <td>@i.Product.productPrice</td>
+                            <td><input type="number" min="0" max="99" value="@i.Quantity" name="quantity"/>
+                                <input type="submit" id ="update" value="Update"/>
+                            </td>
+                            <td>$ @(i.Product.productPrice * i.Quantity)</td>
+                        </tr>
+                        count++;
+                    }
+                }
+                <tr>
+                    <td></td>
+                    <td colspan="3">SubTotal</td>
+                    <td>$ @sum</td>
+                </tr>
+            </tbody>
+        </table>
+    }
+   
 
     <button type="button" onclick="location.href='@Url.Action("Index","Home")'">Continue Shopping</button>
 </fieldset>
