--- a/RaiderPlate Cont/Content/bootstrap.css
+++ b/RaiderPlate Cont/Content/bootstrap.css
@@ -1702,7 +1702,11 @@ input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   height: auto;
 }
-
+.search-form {
+    float: left;
+    margin-top: 10px;
+    margin-left: 20px;
+}
 .form-control:-moz-placeholder {
   color: #999999;
 }
@@ -2174,6 +2178,26 @@ fieldset[disabled] .btn-warning.active {
   border-color: #eea236;
 }
 
+.btn-remove{
+  color: #ffffff;
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+.btn-remove:before{    
+  content: "\e083";
+}
+
+.btn-remove:hover,
+.btn-remove:focus,
+.btn-remove:active,
+.btn-remove.active,
+.open .dropdown-toggle.btn-danger {
+  color: #ffffff;
+  background-color: #d2322d;
+  border-color: #ac2925;
+}
+
+}
 .btn-danger {
   color: #ffffff;
   background-color: #d9534f;
@@ -4387,32 +4411,32 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: #4e5d6c;
   border-color: #e7e7e7;
 }
 
 .navbar-default .navbar-brand {
-  color: #777777;
+  color: #ebebeb;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #5e5e5e;
+  color: #ebebed;
   background-color: transparent;
 }
 
 .navbar-default .navbar-text {
-  color: #777777;
+  color: #ebebeb;
 }
 
 .navbar-default .navbar-nav > li > a {
-  color: #777777;
+  color: #ebebeb;
 }
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333333;
-  background-color: transparent;
+  color: #ebebeb;
+  background-color: #485563;
 }
 
 .navbar-default .navbar-nav > .active > a,
@@ -6816,4 +6840,21 @@ td.visible-print {
   td.hidden-print {
     display: none !important;
   }
+ 
+
+}
+
+ .cart-button {
+    position: relative;
+    display: inline-block;
+}
+
+    .cart-dropdown {
+    display: none;
+    position: absolute;
+    background-color: #4e5d6c;
+    min-width: 200px;
+    padding: 12px 16px;
+    z-index: 1;
+    float:left;
 }
