--- a/RaiderPlate Cont/Views/Shared/_Layout.cshtml
+++ b/RaiderPlate Cont/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,13 +18,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @*<form id="frm_search" role="search" name="frm_search" action="/search" class="search-form">
+                    <div class="form-group">
+                        <input type="text" name="searchKey" placeholder="Search product" class="search-input">
+                        <button type="submit" class="btn search-btn">
+                            <span class=" glyphicon glyphicon-search">Search</span>
+                        </button>
+                    </div>
+                </form>*@
+                
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
