--- a/RaiderPlate Cont/Views/Shared/_LoginPartial.cshtml
+++ b/RaiderPlate Cont/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,21 @@
 ﻿@using Microsoft.AspNet.Identity
+<style>
+    .cart-button::selection .cart-dropdown {
+        display: block;
+    }
+</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#cart').popover({
+            html: true,
+            container: 'body',
+            content: function () {
+                return $('#popover_cart').html();
+            }
+        });
+    });
+</script>
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -18,5 +35,24 @@ else
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+        <li class="dropdown">
+            <a id="cart" class="btn" data-placement="bottom">
+                <span class="glyphicon glyphicon-shopping-cart"></span>
+                Your Cart
+            </a>
+        </li>
+</ul>
+<div id="popover_cart" style="display:none">
+    <table id="cartTable" class="table table-striped table-responsive">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Cost</th>
+            </tr>
+        </thead>
+    </table>
+</div>
 }
+
